# Drawdance

./: .clang-format  CMakeLists.txt
appdrawdance/drawdance_web/: attribution.txt
cmake/: compile_flags.cmake
libcommon/: CMakeLists.txt
libcommon/dpcommon/: common.h  cpu.c  cpu.h
libengine/: CMakeLists.txt
libengine/benchmark/: blending_simd_bench.cpp  calculate_opa_simd_bench.cpp  calculate_rr_simd_bench.cpp
libengine/dpengine/: pixels.c  tile.h
simd/: CMakeLists.txt  clang-decompiled.c  combined.c  main.c  simd.c  simd_bench.cpp
